src/frontend/src/styles/components/management-tile.scss
@use '@carbon/react/scss/spacing' as *;
@use '@carbon/react/scss/type' as *;
@use '../mixins' as *;

.management-tile {
    $tile-width: 400px;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: var($sms-color-neutral-background);
    padding: $spacing-07;
    height: 600px;
    width: $tile-width;
    color: #000;

    .heading {
        p {
            @include type-style('body-compact-02');
        }

        .divider {
            position: relative;
            top: 25%;
            left: -$spacing-07;
            width: $tile-width;
            border: 1px dashed black;
        }
    }

    .heading > .icon-header {
        display: flex;
        justify-content: space-between;

        h3 {
            @include type-style('heading-04');
            margin-bottom: $spacing-05;
        }
    }

    .actions {
        display: flex;
        flex-direction: column;
        row-gap: $spacing-06;
    }
}

